# FACT_core

./: .bettercodehub.yml  .buildinfo  .codacy.yml  .coveragerc  .flake8  .gitignore  .gitmodules  .isort.cfg  .jshintrc  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  INSTALL.vagrant.md  README.md  docker-compose.yml  genindex.html  index.html  install.py  main.html  migration.html  objects.inv  privileges  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  start_fact.py  start_fact_backend.py  start_fact_database.py  start_fact_frontend.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: Lintly-Flake8.yml  build_ci.yml  ci_focal.yml  deploy_docs.yml  docs_ci.yml  lint_action.yml  pre-commit.yml  ruff.yml
_sources/: index.rst.txt  main.rst.txt
_sources/modules/: helperFunctions.database.rst.txt  helperFunctions.merge_generators.rst.txt  helperFunctions.mongo_task_conversion.rst.txt  helperFunctions.object_storage.rst.txt  helperFunctions.process.rst.txt  helperFunctions.rst.txt  helperFunctions.uid.rst.txt  objects.file.rst.txt  objects.firmware.rst.txt  test.unit.rst.txt
docker/: 0000_uwsgi_bindip.patch  0001_main_cfg.patch  Dockerfile  Makefile  README.md  entrypoint.sh  entrypoint_backend.sh  entrypoint_frontend.sh
docs/: Makefile  _config.yml  conf.py  index.md  main.rst
docs/subsection/: coding_guideline.md
docsrc/: README.md  autodoc_dependencies.txt  build.sh  conf.py  doc_dependencies.txt  index.rst  main.rst  migration.rst
docsrc/modules/: analysis.plugin.plugin.rst  analysis.plugin.rst  analysis.rst  config.rst  conftest.rst  helperFunctions.compare_sets.rst  helperFunctions.config.rst  helperFunctions.config_deprecated.rst  helperFunctions.data_conversion.rst  helperFunctions.debug.rst  helperFunctions.docker.rst  helperFunctions.fileSystem.rst  helperFunctions.hash.rst  helperFunctions.install.rst  helperFunctions.logging.rst  helperFunctions.mongo_config_parser.rst  helperFunctions.object_conversion.rst  helperFunctions.pdf.rst  helperFunctions.plugin.rst  helperFunctions.program_setup.rst  helperFunctions.rst  helperFunctions.tag.rst  helperFunctions.task_conversion.rst  helperFunctions.virtual_file_path.rst  helperFunctions.web_interface.rst  helperFunctions.yara_binary_search.rst  objects.rst  plugins.analysis.plugin.rst  plugins.analysis.rst  plugins.installer.rst  plugins.rst  scheduler.analysis.plugin.rst  scheduler.analysis.rst  scheduler.analysis.scheduler.rst  scheduler.rst  test.rst  test.unit.conftest.rst  web_interface.rest.helper.rst  web_interface.rest.rst  web_interface.rst
fact/: alembic.ini  check_signatures.py  config.py  conftest.py  fact_base.py  flask_app_wrapper.py  init_postgres.py  install.py  migrate_database.py  start_fact.py  start_fact_backend.py  start_fact_database.py  start_fact_frontend.py  update_statistic.py
fact/analysis/: PluginBase.py  YaraPluginBase.py
fact/compare/: PluginBase.py  compare.py
fact/config/: mongod.conf  nginx.conf
fact/helperFunctions/: data_conversion.py  fileSystem.py  hash.py  install.py  logging.py  merge_generators.py  object_conversion.py  pdf.py  plugin.py  process.py  program_setup.py  task_conversion.py  uid.py  web_interface.py  yara_binary_search.py
fact/install/: apt-pkgs-common.txt  db.py  (+5 more)
installer/: __main__.py  apt-pkgs-backend.txt  backend.py  common.py  db.py  dnf-pkgs-common.txt  frontend.py  pre_install_fedora.sh
modules/: analysis.html  analysis.plugin.html  analysis.plugin.plugin.html  config.html  conftest.html  helperFunctions.compare_sets.html  helperFunctions.config.html  helperFunctions.data_conversion.html  helperFunctions.database.html  helperFunctions.docker.html  helperFunctions.fileSystem.html  helperFunctions.hash.html  helperFunctions.html  helperFunctions.install.html  helperFunctions.logging.html  helperFunctions.merge_generators.html  helperFunctions.mongo_config_parser.html  helperFunctions.mongo_task_conversion.html  helperFunctions.object_conversion.html  helperFunctions.object_storage.html  helperFunctions.pdf.html  helperFunctions.plugin.html  helperFunctions.process.html  helperFunctions.program_setup.html  helperFunctions.tag.html  helperFunctions.task_conversion.html  helperFunctions.uid.html  helperFunctions.virtual_file_path.html  helperFunctions.web_interface.html  helperFunctions.yara_binary_search.html  objects.file.html  objects.firmware.html  objects.html  plugins.html  plugins.installer.html  scheduler.analysis.html  scheduler.analysis.plugin.html  scheduler.analysis.scheduler.html  scheduler.html  test.html  (+5 more)
scripts/: compile_yara_signatures.py  manage_users.py  migrate_db_to_postgresql.py  start_fact_frontend.py
src/: .bettercodehub.yml  alembic.ini  authenticate_app.py  binary_analysis.py  check_signatures.py  compile_custom_magic.py  compile_yara_signatures.py  config.py  conftest.py  fact_base.py  fact_init.py  faf_init.py  firmware_import_export.py  flake8_test.py  flask_app_wrapper.py  init_database.py  init_postgres.py  install.py  manage_users.py  migrate_database.py  migrate_db_to_postgresql.py  pep8_test.py  pyinstall.py  restart_analysis_and_reload_templates.py  security_switch.py  start_fact.py  start_fact_backend.py  start_fact_database.py  start_fact_db.py  start_fact_frontend.py  start_faf.py  start_faf_backend.py  start_faf_db.py  start_faf_frontend.py  update_statistic.py  update_variety_data.py  version.py  worker.py
src/plugins/analysis/ip_and_uri_finder/: install.py  install.sh  pyproject.toml  requirements.txt
src/plugins/analysis/ip_and_uri_finder/code/: ip_and_uri_finder.py
src/plugins/analysis/ip_and_uri_finder/internal/: interesting_uris.py
src/plugins/analysis/ip_and_uri_finder/test/: test_interesting_uris.py  test_ip_and_uri_finder.py
src/plugins/analysis/ip_and_uri_finder/view/: ip_and_uri_finder.html
src/plugins/analysis/ip_and_uri_finder/virt/: pip-selfcheck.json
tests/: common_helper.py  conftest.py
(+1767 files in other folders)
