[project]
name = "fact-core"
version = "4.4.0-dev"
description = "firmware analysis and comparison tool"
requires-python = ">=3.10"

dependencies = [
    # installation dependencies
    "virtualenv==20.36.1",
    "distro~=1.9.0",
    "packaging~=24.2",
    "python-magic==0.4.27",
    "requests==2.32.4",
    "ijson==3.4.0",
    # config.py
    "pydantic==2.10.6",
    "werkzeug~=3.1.5",
    "toml==0.10.2",
    # common dependencies
    "docker~=7.1.0",
    "pytest-rerunfailures~=14.0",
    "lief~=0.17.0",
    "psutil~=6.1.1",
    "psycopg2-binary~=2.9.10",
    "pylint~=3.2.7",
    "python-tlsh==4.5.0",
    "redis~=5.2.1",
    "rich~=13.9.4",
    "sqlalchemy~=2.0.37",
    "ssdeep @ git+https://github.com/DinoTools/python-ssdeep.git",
    "xmltodict~=0.14.2",
    "aiohttp==3.13.3",
    # plugin versioning
    "semver~=3.0.4",
    # common code modules
    "common_helper_files @ git+https://github.com/fkie-cad/common_helper_files.git",
    "common_helper_filter @ git+https://github.com/fkie-cad/common_helper_filter.git",
    "common_helper_encoder @ git+https://github.com/mass-project/common_helper_encoder.git",
    # database migration
    "alembic~=1.14.1",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "frontend"},
  {include-group = "backend"},
]
frontend = [
    "argon2_cffi~=25.1.0",
    "bcrypt~=4.3.0",
    "email-validator~=2.2.0",
    "flask-login~=0.6.3",
    "flask-paginate~=2024.4.12",
    "flask-security-too~=5.6.2",
    "flask-wtf~=1.2.2",
    "flask~=3.1.1",
    "flask-restx~=1.3.0",
    "flask-sqlalchemy~=3.1.1",
    "gql~=3.5.3",
    "itsdangerous~=2.2.0",
    "matplotlib~=3.10.5",
    "more-itertools~=10.7.0",
    "prompt-toolkit~=3.0.51",
    "python-dateutil~=2.9.0",
    "quantiphy~=2.20",
    "uwsgi~=2.0.30",
    # npm installation
    "nodeenv~=1.9.1",
    # Used for username validation by flask-security
    "bleach~=6.2.0",
]
backend = [
    "yara-python @ git+https://github.com/VirusTotal/yara-python.git@v4.5.0",
    "cryptography~=44.0.0",
    "MarkupSafe~=2.1.5",
    "networkx~=3.1",
    "Pillow~=12.1.0",
    "pyopenssl~=25.0.0",
    "pyyaml~=6.0.2",
]
lint = [
    "pre-commit==4.5.1",
]
test = [
    "pytest-cov~=5.0.0",
    "pytest-timeout~=2.3.1",
    "pytest~=8.3.4",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "src/test",
    "src/plugins/**/test",
]
markers = [
    "AnalysisPluginTestConfig: Configure the analysis_plugin fixture",
    "SchedulerTestConfig: Configure the analysis_scheduler, comparison_scheduler and unpacking_scheduler",
    "WebInterfaceUnitTestConfig: Configure the web_interface fixture",
    "backend_config_overwrite: Overwrite defaults for the testing backend config",
    "common_config_overwrite: Overwrite defaults for the testing common config",
    "frontend_config_overwrite: Overwrite defaults for the testing frontend config",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "bin",
    "node_modules",
    "docker",  # ingore plugins/*/*/docker/scripts/* jython ghidra scripts
    "venv",
    "data",  # ignore plugins/*/*/test/data/* test data folders (containing test files)
    "src/plugins/analysis/input_vectors/internal",  # FixMe: runs inside a bionic docker container with python 3.6
]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle Error
    "W",  # pycodestyle Warning
    "C90",  # mccabe
    "I",  # isort
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "EXE",  # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",  # Pylint
    "PERF",  # Perflint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "A003",
    "PERF203",
    "PERF401",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    # pydantic only supports these from python>=3.9
    "UP006",
    "UP007",
    # rules may cause conflicts when used with the formatter
    "ISC001",
    "Q001",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["ARG002", "PLR2004"]
"conftest.py" = ["ARG001", "ARG002"]
"common_helper.py" = ["ARG002"]
# ignore prints in CLI scripts
"migrate_db_to_postgresql.py" = ["T201"]
"manage_users.py" = ["T201"]
"migrate_database.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["analysis", "compare", "helperFunctions", "install", "intercom", "objects", "plugins", "scheduler",
    "statistic", "storage", "test", "unpacker", "version", "web_interface", "config"]
known-third-party = ["docker"]

[tool.ruff.lint.pylint]
max-args=7
max-public-methods = 40

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
omit = [
    # ignore install scripts
    "src/install.py",
    "src/install/*",
    # ignore alembic migration scripts
    "src/storage/migration/**",
    # ignore files only run inside docker
    "src/plugins/analysis/*/docker/**",
]

[tool.coverage.report]
exclude_also = [
    # exclude type checking blocks which are not executed during runtime
    "if TYPE_CHECKING:",
    # also don't complain about abstract methods (as they're also not run)
    "@(abc\\.)?abstractmethod",
]
