[project]
name = "fact-plugin-ip_and_uri_finder"
version = "1.2.0"
dependencies = [
    "fact-core",
    "common_analysis_ip_and_uri-finder @ git+https://github.com/fkie-cad/common_analysis_ip_and_uri.git",
    "geoip2==4.7.0",
    "aiohttp~=3.13.3",
]

[tool.uv.sources]
fact-core = { workspace = true }
